make sure dropdowns and date pickers are visible in modals

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -110,7 +110,7 @@ li.link-list__item > button.button {
 /* temporary fix for besluittypes dropdown */
 
 .ember-basic-dropdown-content.ember-power-select-dropdown.ember-basic-dropdown-content--below {
-  z-index: 1010;
+  z-index: 9999;
 }
 
 /* temporary demo fixes for fracties */
@@ -416,4 +416,14 @@ input.input-field {
 
 .modal-overlay {
   z-index: 9999;
+}
+
+.pika-single {
+  z-index: 9999;
+}
+
+// Fix dropdown above
+.ember-basic-dropdown-content--above .ember-power-select-dropdown.ember-basic-dropdown-content--below, .ember-power-select-dropdown.ember-basic-dropdown-content--in-place {
+  border-bottom: 0;
+  border-top: .1rem solid $au-gray-300;
 }
